fix(logo): change z-index of logo to 1 to appear before the rest

--- a/src/assets/sass/modules/_navigation.scss
+++ b/src/assets/sass/modules/_navigation.scss
@@ -19,6 +19,7 @@ nav{
 }
 
 .navigation__logo{
+    z-index: 1;
     margin-top: 3.8rem;
     margin-left: -0.5rem;
     width: 7.4rem;
